--- a/css/styles.css
+++ b/css/styles.css
@@ -517,6 +517,7 @@ img {
 
 .footer-form-wrap {
     display: flex;
+    gap: 24px;
 }
 
 .footer-input {
@@ -589,13 +590,14 @@ img {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 24px;
+    padding: 72px 24px 24px 24px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn {
-    margin-left: auto;
-    padding: 24px;
+    position: absolute;
+    top: 24px;
+    right: 24px;
     width: 24px;
     height: 24px;
     border-radius: 50%;
@@ -640,7 +642,7 @@ img {
     margin-bottom: 8px;
 }
 .modal-label-text {
-    display: inline-block;
+    display: block;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
@@ -659,6 +661,7 @@ img {
     padding-left: 38px;
     background-color: transparent;
     outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:focus,
@@ -677,16 +680,26 @@ img {
     left: 16px;
     top: 50%;
     transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-field {
+    margin-bottom: 16px;
 }
 
 .modal-text-comment {
     width: 100%;
     height: 120px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
+    background-color: transparent;
     padding: 8px 16px;
+    outline: transparent;
     resize: none;
-    margin-bottom: 16px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-text-comment:focus, 
@@ -694,6 +707,9 @@ img {
     border: 1px solid #4d5ae5;
 }
 
+.modal-field-check {
+    margin-bottom: 24px;
+}
 
 .modal-check-text {
     font-size: 12px;
@@ -703,7 +719,7 @@ img {
     align-items: center;
 }
 
-.modal-check-text  span {
+.check-span {
     width: 16px;
     height: 16px;
     display: inline-flex;
@@ -714,7 +730,6 @@ img {
     justify-content: center;
     fill: transparent;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    margin-bottom: 24px;
 }
 
 .link-privacy {
@@ -729,6 +744,7 @@ img {
     background-color: #404bbf;
     border: 1px solid #404bbf;
     fill: #f4f4fd;
+    border:none
 }
 
 .modal-button {
@@ -739,6 +755,7 @@ img {
     border: none;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background-color: #4d5ae5;
+    font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
@@ -746,6 +763,7 @@ img {
     color: #fff;
     border-radius: 4px;
     text-align: center;
+    cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
