--- a/css/styles.css
+++ b/css/styles.css
@@ -467,7 +467,6 @@ img {
     letter-spacing: 0.02em;
     color: #fff;
     margin-bottom: 16px;
-    margin-right: 80px;
 }
 
 .footer-list {
@@ -497,66 +496,58 @@ img {
     fill: #f4f4fd;
 }
 
-.footer-form-main {
-    display: flex;
-}
-
 .footer-form-text {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #fff;
+    color: #ffffff;
     margin-bottom: 16px;
 }
-
-.footer-form {
-    display: flex;
-    margin-right: 24px;
-}
-
 .footer-form-wrap {
     display: flex;
     gap: 24px;
 }
 
 .footer-input {
-    border: 1px solid #fff;
-    border-radius: 4px;
     width: 264px;
     height: 40px;
+    border: 1px solid #ffffff;
+    border-radius: 4px;
     background-color: transparent;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    color: #ffffff;
     padding-left: 16px;
 }
 
 .footer-input::placeholder {
-    font-size: 12px;
-    line-height: 2;
-    letter-spacing: 0.04em;
     color: #ffffff;
-    padding-left: 0 16px;
 }
 
 .footer-form-button {
-    display: flex;
-    border-radius: 4px;
-    padding: 8px 24px;
-    width: 165px;
+    min-width: 165px;
     height: 40px;
-    border: none;
-    background: #4d5ae5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
     text-align: center;
-    color: #fff;
+    color: #ffffff;
     cursor: pointer;
+    background-color: #4d5ae5;
+    border: none;
+    border-radius: 4px;
 }
 
 .footer-icon-send {
-    fill: #fff;
+    fill: #ffffff;
     margin-left: 16px
 }
 
@@ -682,9 +673,6 @@ img {
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-field {
-    margin-bottom: 16px;
-}
 
 .modal-text-comment {
     width: 100%;
@@ -748,8 +736,8 @@ img {
 }
 
 .modal-button {
-    min-width: 169px;
-    height: 56px;
+    min-width: 165px;
+    height: 40px;
     display: block;
     margin: 0 auto;
     border: none;
@@ -765,6 +753,10 @@ img {
     text-align: center;
     cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-icon-send {
+    margin-left: 16px;
 }
 
 .modal-button:focus,
